--- a/templates/balises_template/index.html.twig
+++ b/templates/balises_template/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello BalisesTemplateController!{% endblock %}
+{% block title %}Saisie des Artistes!{% endblock %}
 
 {% block body %}
 <style>
