--- a/templates/artiste/index.html.twig
+++ b/templates/artiste/index.html.twig
@@ -13,9 +13,9 @@
     {{ form_widget(artisteForm.genre) }}
     {{ form_errors(artisteForm.genre) }}<hr>
 
-    {{ form_label(artisteForm.thumbnail) }}
-    {{ form_widget(artisteForm.thumbnail) }}
-    {{ form_errors(artisteForm.thumbnail) }}<hr>
+    {{ form_label(artisteForm.profile) }}
+    {{ form_widget(artisteForm.profile) }}
+    {{ form_errors(artisteForm.profile) }}<hr>
     <input type="submit" value="Envoyer">
     {{ form_end(artisteForm) }}
 
