--- a/templates/artiste/index.html.twig
+++ b/templates/artiste/index.html.twig
@@ -19,5 +19,8 @@
     <input type="submit" value="Envoyer">
     {{ form_end(artisteForm) }}
 
+    {% for artiste in artistes %}
+    {{ artiste.name }}
+    {% endfor %}
 
 {% endblock %}
