--- a/templates/artiste/index.html.twig
+++ b/templates/artiste/index.html.twig
@@ -13,9 +13,34 @@
     {{ form_widget(artisteForm.genre) }}
     {{ form_errors(artisteForm.genre) }}<hr>
 
-    {{ form_label(artisteForm.profile) }}
-    {{ form_widget(artisteForm.profile) }}
-    {{ form_errors(artisteForm.profile) }}<hr>
+    {{ form_label(artisteForm.thumbnail) }}
+    {{ form_widget(artisteForm.thumbnail) }}
+    {{ form_errors(artisteForm.thumbnail) }}<hr>
+
+    {{ form_label(artisteForm.day) }}
+    {{ form_widget(artisteForm.day) }}
+    {{ form_errors(artisteForm.day) }}<hr>
+
+    {{ form_label(artisteForm.time) }}
+    {{ form_widget(artisteForm.time) }}
+    {{ form_errors(artisteForm.time) }}<hr>
+
+    {{ form_label(artisteForm.timeValue) }}
+    {{ form_widget(artisteForm.timeValue) }}
+    {{ form_errors(artisteForm.timeValue) }}<hr>
+
+    {{ form_label(artisteForm.place) }}
+    {{ form_widget(artisteForm.place) }}
+    {{ form_errors(artisteForm.place) }}<hr>
+
+    {{ form_label(artisteForm.type) }}
+    {{ form_widget(artisteForm.type) }}
+    {{ form_errors(artisteForm.type) }}<hr>
+
+    {{ form_label(artisteForm.description) }}
+    {{ form_widget(artisteForm.description) }}
+    {{ form_errors(artisteForm.description) }}<hr>
+
     <input type="submit" value="Envoyer">
     {{ form_end(artisteForm) }}
 
