--- a/templates/artiste/index.html.twig
+++ b/templates/artiste/index.html.twig
@@ -44,4 +44,8 @@
     <input type="submit" value="Envoyer">
     {{ form_end(artisteForm) }}
 
+    {% for article in articles %}
+        {{ artiste.name }}
+    {% endfor %}
+
 {% endblock %}
